kubernetes-hw-14/src/ex.3/svc-v1.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v1
  namespace: app
spec:
  selector:
    app: nginx
    version: v1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
