kubernetes-hw-14/src/ex.3/svc-v2.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-v2
  namespace: app
spec:
  selector:
    app: nginx
    version: v2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
